# foodbiz

./: CODEX Prompt logbook.txt  endtoendworkflows.txt
repo/backend/: Dockerfile  alembic.ini  pyproject.toml
repo/backend/src/rop/api/: dependencies.py  error_handling.py  main.py
repo/backend/src/rop/api/middleware/: request_id.py
repo/backend/src/rop/api/routes/: health.py  inventory.py  kitchen.py  location_orders.py  locations.py  menu.py  metrics.py  order_events.py  orders.py  restaurants.py  roles.py  sessions.py  table_orders.py  table_registry.py  tables.py
repo/backend/src/rop/api/ws/: manager.py  routes.py
repo/backend/src/rop/application/catalog/: schemas.py  service.py
repo/backend/src/rop/application/commerce/: schemas.py  service.py
repo/backend/src/rop/application/dto/: requests.py  responses.py
repo/backend/src/rop/application/inventory/: service.py
repo/backend/src/rop/application/kitchen/: schemas.py  service.py
repo/backend/src/rop/application/mappers/: event_envelope.py  events.py  foundation_mapper.py  menu_mapper.py  order_mapper.py  table_mapper.py
repo/backend/src/rop/application/metrics/: order_lifecycle.py
repo/backend/src/rop/application/ports/: cache.py  publisher.py  repositories.py
repo/backend/src/rop/application/staff/: schemas.py  service.py
repo/backend/src/rop/application/use_cases/: accept_order.py  close_table.py  context.py  create_order.py  get_menu.py  get_order.py  kitchen_queue.py  list_tables.py  location_orders.py  locations.py  mark_order_ready.py  mark_order_served.py  mark_order_settled.py  open_table.py  order_events.py  place_order.py  restaurants.py  roles.py  sessions.py  table_lifecycle.py  table_orders.py  table_summary.py
repo/backend/src/rop/domain/: __init__.py  errors.py
repo/backend/src/rop/domain/catalog/: entities.py
repo/backend/src/rop/domain/commerce/: __init__.py  enums.py  rules.py
repo/backend/src/rop/domain/common/: ids.py  location_keys.py  money.py
repo/backend/src/rop/domain/inventory/: entities.py
repo/backend/src/rop/domain/kitchen/: workflow.py
repo/backend/src/rop/domain/location/: entities.py
repo/backend/src/rop/domain/menu/: entities.py
repo/backend/src/rop/domain/order/: entities.py  events.py  value_objects.py
repo/backend/src/rop/domain/restaurant/: entities.py
repo/backend/src/rop/domain/role/: entities.py
repo/backend/src/rop/tools/: seed.py
repo/backend/tests/integration/: conftest.py  test_admin_api.py  test_foundation_endpoints.py  test_idempotency_and_kitchen_queue.py  test_kitchen_and_tables_api.py  test_menu_endpoint.py  test_migration_sanity.py  test_off_premise_order_flow.py  test_order_concurrency.py  test_order_flow_db.py  test_orders_api.py  test_place_order_publishes_redis_event.py  test_redis_pubsub_events.py  test_sessions_api.py  test_table_history_and_close.py  test_table_registry_list.py  test_websocket_events.py  test_websocket_receives_order_placed.py  test_ws_receives_events.py
repo/backend/tests/unit/: test_commerce_rules.py  test_depcheck.py  test_health.py  test_kitchen_workflow.py  test_list_tables_use_case.py
repo/backend/tests/unit/menu/: test_domain_menu.py  test_get_menu_use_case.py
repo/backend/tests/unit/order/: test_kitchen_queue_use_case.py  test_mark_order_served_use_case.py  test_mark_order_settled_use_case.py  test_order_domain.py  test_place_order_use_case.py  test_use_cases.py
repo/backend/tests/unit/table/: test_close_table_use_case.py  test_table_domain.py  test_table_orders_use_case.py
repo/backend/tools/: depcheck.py
(+117 files in other folders)
