[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rop-backend"
version = "0.1.0"
description = "Restaurant Operating Platform backend foundation"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<0.116",
  "uvicorn[standard]>=0.30,<0.31",
  "pydantic>=2.9,<2.10",
  "sqlalchemy>=2.0.36,<2.1",
  "psycopg[binary]>=3.2,<3.3",
  "alembic>=1.13,<1.14",
  "redis>=5.2,<6",
  "setuptools>=68,<82",
  "opentelemetry-api>=1.27,<1.28",
  "opentelemetry-sdk>=1.27,<1.28",
  "opentelemetry-exporter-otlp>=1.27,<1.28",
  "opentelemetry-instrumentation-fastapi>=0.48b0,<0.49",
  "prometheus-client>=0.21,<0.22",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<8.4",
  "pytest-asyncio>=0.24,<0.25",
  "httpx==0.27.2",
  "ruff>=0.6,<0.7",
  "mypy>=1.19,<1.20",
  "types-redis>=4.6,<5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_configs = true
check_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
